--- a/index.html
+++ b/index.html
@@ -4,12 +4,43 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css"/>
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 </head>
 <body>
-    <header><ul><li>Karta</li><li>Data</li><li>Something</li></ul></header>
+    <header>
+        <img src="img/clipart2372176.png"/>
+            <p>Karta</p>
+            <p>Data</p>
+            <p>Something</p>
+    </header>
+    <!-- <table id="csvTable"></table> -->
+    <!-- <div class="slider-container">
+        <span class="year-label" id="startYearLabel">2000</span>
+        <input type="range" id="startYear" class="slider" min="2000" max="2020" value="2000" step="1" />
+        <span class="year-label" id="endYearLabel">2020</span>
+        <input type="range" id="endYear" class="slider" min="2000" max="2020" value="2020" step="1" />
+    </div> -->
 
+
+    <div class="range-container">
+        <div class="range-slider">
+            <input type="range" id="lower" min="0" max="100" value="25">
+            <input type="range" id="upper" min="0" max="100" value="75">
+            <div class="track"></div>
+            <div class="range" id="range"></div>
+        </div>
+        <div class="slider-value">
+            <span>Lower Value: <span id="lower-value">25</span></span>
+            <span>Upper Value: <span id="upper-value">75</span></span>
+        </div>
+    </div>
+    <canvas id="myChart" width="400" height="200"></canvas> Canvas for the chart
 
 
     <footer>Datadashboard</footer>
+<script>
+</script>
+<script src="script.js"></script>
 </body>
 </html>
