--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 </div>
 </div>
 
-<canvas id="myChart" width="400" height="200"></canvas> Canvas for the chart
+<canvas id="myChart" width="400" height="200"></canvas>
   </main>
 
 
