Added some more css to make the website look a little bit more clean

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 <main>
     <div class="container">
         <div class="chart-container">
-        <canvas id="temperaturChart"></canvas>
+            <canvas id="myChart" width="400" height="200"></canvas>
       </div>
       <div class="sidebar">
         <h2>Filter</h2>
@@ -44,7 +44,6 @@
 </div>
 </div>
 
-<canvas id="myChart" width="400" height="200"></canvas>
   </main>
 
 
@@ -53,9 +52,8 @@
 </script>
 <script src="script.js"></script>
 <footer>
-    <p>projektdeltagare ...</p>
-    <li>Mariia =>Pontus => Faisal</li>
-    <li>Skellefteå Team</li>
+    <p>Mariia =>Pontus => Faisal</p>
+    <p>Skellefteå Team</p>
   </footer>
 
 </body>
